--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -2,6 +2,28 @@
     &__pictures {
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg); // here we have a filter over the background image
+
+        display: grid; // turniing .story__pictures into a grid container
+        grid-template-rows: repeat(6, 1fr); // setting the rows to be 6 fractional units wide
+        grid-template-columns: repeat(6, 1fr); // setting columns to be 6 fractional units tall
+        align-items: center;
+    }
+
+    &__img--1 {
+        width: 100%;
+        grid-row: 2 / 6;
+        grid-column: 2 / 6; // normally an item would fill the whole grid area but in the case of a photo it may not due to aspect ratio
+        box-shadow: 0 2rem 5rem rgba(#000, .1)
+    }
+
+    &__img--2 {
+        width: 115%;
+        grid-row: 4 / 6;
+        grid-column: 4 / 7;
+        z-index: 20; // ensures all of the photo is on top
+        box-shadow: 0 2rem 5rem rgba(#000, .2)
+
     }
 
     &__content {
