--- a/Nexter/starter/sass/_homes.scss
+++ b/Nexter/starter/sass/_homes.scss
@@ -3,23 +3,36 @@
     margin: 15rem 0;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); // defining columns and leaving the rows implicit
     grid-gap:7rem;
 }
 
 .home{
     background-color: $color-grey-light-1;
 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); // again we difine the column and let grid handle the rows implicidly 
+
     &__img {
         width: 100%;
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        z-index: 1;
     }
 
     &__like {
-
+       grid-row: 1 / 2;
+       grid-column: 2 / 3;
+       fill: $color-primary;
+       height: 2.5rem;
+       width: 2.5rem;
+       z-index: 2;
+       justify-self: end;
+       margin: 1rem;
     }
-
+    
     &__name {
-
+        grid-column: 1 / -1;
     }
 
     &__location, // this is how we are sekecting all the svg icons at once
@@ -36,5 +49,10 @@
         p {
 
         }
+
+    }
+    
+    &__btn {
+        grid-column: 1/ -1;
     }
 }
