--- a/Nexter/starter/sass/_gallery.scss
+++ b/Nexter/starter/sass/_gallery.scss
@@ -84,7 +84,7 @@
     &__img{
         width:100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: cover; // this helps the photos keep the the aspect ratio the same
         display: block;
     }
 
