--- a/Nexter/starter/sass/_header.scss
+++ b/Nexter/starter/sass/_header.scss
@@ -25,13 +25,33 @@
     }
 
     &__seenon-text {
+        display: grid;
+        grid-template-columns: 1fr min-content 1fr;
+        grid-column-gap: 1.5rem;
+        align-items: center;
+
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+
+        &::before,
+        &::after {
+            content: ""; // we set the content even if its to nothing or this wont work
+            height: 1px;
+            display: block;
+            background-color: currentColor; // uses the parent color
+        }
 
     }
 
     &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3rem;
+        justify-items: center;
 
         img {
             height: 2.5rem;
+            filter: brightness(70%) 
         }
     }
 }
