--- a/Nexter/starter/sass/_realtors.scss
+++ b/Nexter/starter/sass/_realtors.scss
@@ -1,4 +1,21 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+
+    &__list {
+        display: grid;
+        grid-template-columns: min-content max-content;
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    &__sold {
+        text-transform: uppercase;
+        color: $color-grey-light-2;
+        margin-top: -3px;
+    }
 }
