--- a/Nexter/starter/sass/_sidebar.scss
+++ b/Nexter/starter/sass/_sidebar.scss
@@ -3,6 +3,14 @@
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1/ -1; // top to bottom 
     display: flex; // flexbox is still nice for positioning simple things
+
+    display: flex;
+    justify-content: center;
+
+    @media only screen and ( max-width: $bp-large) {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+    }
 }
 
 .nav-btn{
